--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -3,12 +3,12 @@ $calendar-color-inactive-day: #e5e5e5;;
 $calendar-color-inactive-day-index: #999999;
 
 .Calendar {
-    min-height: 580px;
     height: 100%;
 
     .ToolBar {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin-bottom: 15px;
     }
 
@@ -41,7 +41,7 @@ $calendar-color-inactive-day-index: #999999;
             &-Week {
                 display: flex;
                 justify-content: space-between;
-                height: 100%;
+                height: 80px;
                 max-height: 15%;
                 border-bottom: 1px solid $calendar-color-border;
 
