--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -19,6 +19,7 @@ $calendar-height-day: 100px;
     height: 100%;
     font-size: $calendar-font-size;
     font-family: $calendar-font-family;
+    overflow: hidden;
 
     .ToolBar {
         display: flex;
@@ -147,15 +148,18 @@ $calendar-height-day: 100px;
     }
 
     .Event {
-        max-width: calc(100% - (2 * #{$calendar-padding-event}));
-        max-height: calc(100% - (2 * #{$calendar-padding-event}));
+        max-width: 100%;
+        max-height: 100%;
         color: #fff;
         background-color: $calendar-color-event;
         border-radius: 5px;
-        padding: $calendar-padding-event;
         margin-bottom: 1px;
         text-align: left;
         z-index: 2;
+
+        &-inner {
+            padding: $calendar-padding-event;
+        }
 
         &-More {
             display: block;
