Drag and drop on time slot + fix state event copy

--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -169,6 +169,10 @@ $calendar-width-header-slot: 100px;
         text-align: left;
         z-index: 2;
 
+        &[draggable=true] {
+            cursor: pointer;
+        }
+
         &-inner {
             padding: $calendar-padding-event;
         }
