Prop components + settings forms (wip)

--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -28,6 +28,10 @@ $calendar-width-header-slot: 100px;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 15px;
+
+        &-SubGroup {
+            display: flex;
+        }
     }
 
     &-Day {
