Feature - Manage settings (#4)
* Prop components + settings forms (wip)

* Fix toolbar classnames

* Fix change view/navigation

--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -23,10 +23,18 @@ $calendar-width-header-slot: 100px;
     font-size: $calendar-font-size;
     font-family: $calendar-font-family;
 
-    .ToolBar {
+    &-ToolBar {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 15px;
+
+        &-SubGroup {
+            display: flex;
+        }
+    }
+
+    &-SettingsForm {
         margin-bottom: 15px;
     }
 
