--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -167,6 +167,7 @@ $calendar-width-tooltip: 250px;
                 &-Day {
                     width: 100%;
                     text-align: center;
+                    position: relative;
 
                     & + & {
                         border-left: 1px solid $calendar-color-border;
@@ -206,7 +207,6 @@ $calendar-width-tooltip: 250px;
 
         &-inner {
             padding: $calendar-padding-event;
-            position: relative;
         }
 
         &-More {
@@ -228,17 +228,34 @@ $calendar-width-tooltip: 250px;
     }
 
     &-Tooltip {
-        cursor: auto;
-        position: absolute;
-        left: 100%;
-        margin-left: 15px;
-        top: 10px;
         width: $calendar-width-tooltip;
         border-radius: 5px;
         z-index: 1;
         box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14),
             0 9px 46px 8px rgba(0,0,0,0.12),
             0 11px 15px -7px rgba(0,0,0,0.2);
+
+        .Calendar-Day & {
+            position: absolute;
+            width: 50%;
+            left: 25%;
+            margin-top: 15px;
+        }
+
+        .Calendar-Week & {
+            width: $calendar-width-tooltip;
+            position: absolute;
+            left: 100%;
+            margin: 15px;
+        }
+
+        .Calendar-Month & {
+            width: $calendar-width-tooltip;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            margin: 15px;
+        }
 
         &-Title {
             background-color: $calendar-color-event;
