--- a/assets/styles/globalis-react-calendar.scss
+++ b/assets/styles/globalis-react-calendar.scss
@@ -6,13 +6,14 @@ $calendar-color-event: #3174ad;
 $calendar-color-event-green: #33b679;
 $calendar-color-event-purple: #3f51b5;
 $calendar-color-more: #3174ad;
+$calendar-color-holiday: #77777f;
 
 $calendar-font-size: 14px;
 $calendar-font-family: Arial;
 
 $calendar-padding-event: 4px;
 
-$calendar-height-header: 25px;
+$calendar-height-header: 60px;
 $calendar-height-timeslot: 40px;
 $calendar-height-day: 100px;
 
@@ -68,12 +69,21 @@ $calendar-width-header-slot: 100px;
 
             &-Header {
                 height: $calendar-height-header;
-                line-height: $calendar-height-header;
-                vertical-align: middle;
                 text-align: center;
-                font-weight: bold;
                 padding: 2px;
                 border-bottom: 1px solid $calendar-color-border;
+
+                &-Day {
+                    height: 50%;
+                    line-height: calc(0.5 * #{$calendar-height-header});
+                    font-weight: bold;
+                }
+
+                &-Holiday {
+                    color: $calendar-color-holiday;
+                    height: 50%;
+                    line-height: calc(0.5 * #{$calendar-height-header});
+                }
             }
 
             &-Content {
@@ -134,7 +144,6 @@ $calendar-width-header-slot: 100px;
                 width: 100%;
                 height: $calendar-height-header;
                 line-height: $calendar-height-header;
-                vertical-align: middle;
                 text-align: center;
                 font-weight: bold;
                 padding: 2px;
@@ -163,9 +172,14 @@ $calendar-width-header-slot: 100px;
                         border-left: 1px solid $calendar-color-border;
                     }
 
-                    .day-index {
-                        text-align: right;
-                        padding: 2px;
+                    .Day-Header {
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 4px;
+
+                        &-Holiday {
+                            color: $calendar-color-holiday;
+                        }
                     }
 
                     &.Day-inactive {
