Fix - Event color from hexadecimal & inline style

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -2,10 +2,8 @@
 $calendar-color-border: #ddd;
 $calendar-color-outofmonth-day: #e5e5e5;;
 $calendar-color-outofmonth-day-index: #999999;
-$calendar-color-active-time-slot: #999999;
+$calendar-color-active-time-slot: #ddd;
 $calendar-color-event: #3174ad;
-$calendar-color-event-green: #33b679;
-$calendar-color-event-purple: #3f51b5;
 $calendar-color-more: #3174ad;
 $calendar-color-holiday: #77777f;
 
